Fix - contrast error in release date

--- a/frontend-service/src/ui/views/_components/Filters/Filters.module.scss
+++ b/frontend-service/src/ui/views/_components/Filters/Filters.module.scss
@@ -181,7 +181,7 @@
     width: 65% !important;
 
     label {
-      color: var(--text-filters);
+      color: var(--font-filters);
     }
 
     li {
@@ -284,7 +284,7 @@
     }
 
     label {
-      color: var(--text-filters);
+      color: var(--font-filters);
       text-transform: capitalize;
     }
   }
@@ -319,11 +319,11 @@
   .labelDown {
     font-size: 10pt !important;
     top: 50% !important;
-    color: var(--text-filters);
+    color: var(--font-filters);
   }
 
   .label {
-    color: var(--text-filters);
+    color: var(--font-filters);
   }
 }
 
